@@ -2,7 +2,7 @@
 # be overridden (nonfatal tags).  It is based on the data file retrieved from
 # http://ftp-master.debian.org/static/lintian.tags
 #
-# Last updated: 2013-08-20
+# Last updated: 2013-12-28
 
 arch-dependent-file-in-usr-share
 arch-independent-package-contains-binary-or-object
