@@ -1,0 +1,1 @@
+<link href="http://1984.org/style.css" rel="stylesheet" type="text/css" media="all">
