@@ -26,6 +26,7 @@ lintian (2.5.21) UNRELEASED; urgency=medium
     + [BR] Fix non-conf-file-in-modprobe.d description
       (Closes: #729037).
     + [BR] Check privacy breach only in regular file.
+    + [BR] Add link tag as potential privacy breaker.
 
   * checks/rules.{desc,pm}:
     + [BR] Use Lintian::Data for forbidden construct in rules
